--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Top nav / header -->
   <header class="site-header">
-    <div class="container header-row">
+    <img src="logo.png" alt="Litty Collections Logo" class="site-logo">
       <!-- Logo (SVG) -->
       <a class="logo" href="#">
         <!-- Simple elegant SVG logo -->
@@ -197,4 +197,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
