--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Litty Collections — Sarees</title>
+  <h1>Litty Collections</h1>
   <link rel="stylesheet" href="style.css" />
   <meta name="description" content="Litty Collections — Traditional sarees, handpicked Kanjivaram, Banarasi, Silk sarees." />
 </head>
@@ -199,3 +199,4 @@
 </body>
 
 </html>
+
