--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -199,4 +200,5 @@
 </body>
 
 </html>
+
 
