--- a/index.html
+++ b/index.html
@@ -30,13 +30,25 @@
 
   <!-- GALLERY -->
   <section class="gallery">
-    <img src="img1.jpg" alt="Saree" onclick="openImg(this.src)">
-    <img src="img2.jpg" alt="Saree" onclick="openImg(this.src)">
-    <img src="img3.jpg" alt="Saree" onclick="openImg(this.src)">
-    <img src="img4.jpg" alt="Saree" onclick="openImg(this.src)">
-    <img src="img5.jpg" alt="Saree" onclick="openImg(this.src)">
-    <img src="img6.jpg" alt="Saree" onclick="openImg(this.src)">
-  </section>
+   <section class="gallery">
+  <!-- Saree Images -->
+  <!-- 1 to 93 -->
+  <img src="img (1).jpg" onclick="openImg(this.src)">
+  <img src="img (2).jpg" onclick="openImg(this.src)">
+  <img src="img (3).jpg" onclick="openImg(this.src)">
+  <img src="img (4).jpg" onclick="openImg(this.src)">
+  <img src="img (5).jpg" onclick="openImg(this.src)">
+  <img src="img (6).jpg" onclick="openImg(this.src)">
+  <img src="img (7).jpg" onclick="openImg(this.src)">
+  <img src="img (8).jpg" onclick="openImg(this.src)">
+  <img src="img (9).jpg" onclick="openImg(this.src)">
+  <img src="img (10).jpg" onclick="openImg(this.src)">
+
+  <!-- COPY THIS PATTERN -->
+  <!-- change number till 93 -->
+
+  <img src="img (93).jpg" onclick="openImg(this.src)">
+</section>
 
   <!-- FULLSCREEN VIEWER -->
   <div id="viewer" onclick="closeImg()">
@@ -73,3 +85,4 @@
 
 </body>
 </html>
+
