--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
   <img src="img (8).jpg" onclick="openImg(this.src)">
   <img src="img (9).jpg" onclick="openImg(this.src)">
   <img src="img (10).jpg" onclick="openImg(this.src)">
-
+<div class="gallery-item">
+  <img src="images/saree1.jpg" alt="Saree">
+  <p class="ai-disclaimer">
+    This image is AI-generated and used only for representation. It does not depict a real person.
+  </p>
+</div>
   <!-- COPY THIS PATTERN -->
   <!-- change number till 93 -->
 
@@ -85,4 +90,5 @@
 
 </body>
 </html>
+
 
