--- a/index.html
+++ b/index.html
@@ -43,6 +43,89 @@
   <img src="img (8).jpg" onclick="openImg(this.src)">
   <img src="img (9).jpg" onclick="openImg(this.src)">
   <img src="img (10).jpg" onclick="openImg(this.src)">
+  <img src="img (11).jpg" onclick="openImg(this.src)">
+  <img src="img (12).jpg" onclick="openImg(this.src)">
+  <img src="img (13).jpg" onclick="openImg(this.src)">
+  <img src="img (14).jpg" onclick="openImg(this.src)">
+  <img src="img (15).jpg" onclick="openImg(this.src)">
+  <img src="img (16).jpg" onclick="openImg(this.src)">
+<img src="img (17).jpg" onclick="openImg(this.src)">
+<img src="img (18).jpg" onclick="openImg(this.src)">
+<img src="img (19).jpg" onclick="openImg(this.src)">
+<img src="img (20).jpg" onclick="openImg(this.src)">
+<img src="img (21).jpg" onclick="openImg(this.src)">
+<img src="img (22).jpg" onclick="openImg(this.src)">
+<img src="img (23).jpg" onclick="openImg(this.src)">
+<img src="img (24).jpg" onclick="openImg(this.src)">
+<img src="img (25).jpg" onclick="openImg(this.src)">
+<img src="img (26).jpg" onclick="openImg(this.src)">
+<img src="img (27).jpg" onclick="openImg(this.src)">
+<img src="img (28).jpg" onclick="openImg(this.src)">
+<img src="img (29).jpg" onclick="openImg(this.src)">
+<img src="img (30).jpg" onclick="openImg(this.src)">
+<img src="img (31).jpg" onclick="openImg(this.src)">
+<img src="img (32).jpg" onclick="openImg(this.src)">
+<img src="img (33).jpg" onclick="openImg(this.src)">
+<img src="img (34).jpg" onclick="openImg(this.src)">
+<img src="img (35).jpg" onclick="openImg(this.src)">
+<img src="img (36).jpg" onclick="openImg(this.src)">
+<img src="img (37).jpg" onclick="openImg(this.src)">
+<img src="img (38).jpg" onclick="openImg(this.src)">
+<img src="img (39).jpg" onclick="openImg(this.src)">
+<img src="img (40).jpg" onclick="openImg(this.src)">
+<img src="img (41).jpg" onclick="openImg(this.src)">
+<img src="img (42).jpg" onclick="openImg(this.src)">
+<img src="img (43).jpg" onclick="openImg(this.src)">
+<img src="img (44).jpg" onclick="openImg(this.src)">
+<img src="img (45).jpg" onclick="openImg(this.src)">
+<img src="img (46).jpg" onclick="openImg(this.src)">
+<img src="img (47).jpg" onclick="openImg(this.src)">
+<img src="img (48).jpg" onclick="openImg(this.src)">
+<img src="img (49).jpg" onclick="openImg(this.src)">
+<img src="img (50).jpg" onclick="openImg(this.src)">
+<img src="img (51).jpg" onclick="openImg(this.src)">
+<img src="img (52).jpg" onclick="openImg(this.src)">
+<img src="img (53).jpg" onclick="openImg(this.src)">
+<img src="img (54).jpg" onclick="openImg(this.src)">
+<img src="img (55).jpg" onclick="openImg(this.src)">
+<img src="img (56).jpg" onclick="openImg(this.src)">
+<img src="img (57).jpg" onclick="openImg(this.src)">
+<img src="img (58).jpg" onclick="openImg(this.src)">
+<img src="img (59).jpg" onclick="openImg(this.src)">
+<img src="img (60).jpg" onclick="openImg(this.src)">
+<img src="img (61).jpg" onclick="openImg(this.src)">
+<img src="img (62).jpg" onclick="openImg(this.src)">
+<img src="img (63).jpg" onclick="openImg(this.src)">
+<img src="img (64).jpg" onclick="openImg(this.src)">
+<img src="img (65).jpg" onclick="openImg(this.src)">
+<img src="img (66).jpg" onclick="openImg(this.src)">
+<img src="img (67).jpg" onclick="openImg(this.src)">
+<img src="img (68).jpg" onclick="openImg(this.src)">
+<img src="img (69).jpg" onclick="openImg(this.src)">
+<img src="img (70).jpg" onclick="openImg(this.src)">
+<img src="img (71).jpg" onclick="openImg(this.src)">
+<img src="img (72).jpg" onclick="openImg(this.src)">
+<img src="img (73).jpg" onclick="openImg(this.src)">
+<img src="img (74).jpg" onclick="openImg(this.src)">
+<img src="img (75).jpg" onclick="openImg(this.src)">
+<img src="img (76).jpg" onclick="openImg(this.src)">
+<img src="img (77).jpg" onclick="openImg(this.src)">
+<img src="img (78).jpg" onclick="openImg(this.src)">
+<img src="img (79).jpg" onclick="openImg(this.src)">
+<img src="img (80).jpg" onclick="openImg(this.src)">
+<img src="img (81).jpg" onclick="openImg(this.src)">
+<img src="img (82).jpg" onclick="openImg(this.src)">
+<img src="img (83).jpg" onclick="openImg(this.src)">
+<img src="img (84).jpg" onclick="openImg(this.src)">
+<img src="img (85).jpg" onclick="openImg(this.src)">
+<img src="img (86).jpg" onclick="openImg(this.src)">
+<img src="img (87).jpg" onclick="openImg(this.src)">
+<img src="img (88).jpg" onclick="openImg(this.src)">
+<img src="img (89).jpg" onclick="openImg(this.src)">
+<img src="img (90).jpg" onclick="openImg(this.src)">
+<img src="img (91).jpg" onclick="openImg(this.src)">
+<img src="img (92).jpg" onclick="openImg(this.src)">
+<img src="img (93).jpg" onclick="openImg(this.src)">
 <div class="gallery-item">
   <img src="images/saree1.jpg" alt="Saree">
   <p class="ai-disclaimer">
@@ -90,5 +173,6 @@
 
 </body>
 </html>
+
 
 
