--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Litty Collections</title>
+  <title>Litty Collections | Official Saree Store</title>
+<meta name="description" content="Litty Collections official website. Buy sarees, silk sarees, bridal and party wear collections online.">
+<meta name="keywords" content="Litty Collections, Litty Collections Sarees, saree shop online">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 
@@ -173,6 +174,7 @@
 
 </body>
 </html>
+
 
 
 
