--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
 
   <!-- HEADER -->
+  <link rel="icon" type="image/png" href="favicon.png">
+<title>Litty Collections</title>
   <header class="header">
     <img src="logo.png" alt="Litty Collections Logo" class="logo">
     <h1>Litty Collections</h1>
@@ -174,6 +176,7 @@
 
 </body>
 </html>
+
 
 
 
