--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body>
 
   <!-- HEADER -->
+  <header class="top-header">
+  <img src="logo.png" alt="Litty Collections Logo" class="site-logo">
+  <h1>Litty Collections</h1>
+</header>
   <link rel="icon" type="image/png" href="favicon.png">
 <title>Litty Collections</title>
   <header class="header">
@@ -176,6 +180,7 @@
 
 </body>
 </html>
+
 
 
 
