--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <!-- Premium font -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
+  <head>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <title>Litty Collections</title>
+</head>
 <body>
 
   <!-- HEADER -->
@@ -180,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
